[project]
name = "trailmarker"
version = "0.1.0"
description = "AI-powered portfolio management with LangGraph - trailing stop-loss tracking via CLI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Makai Smith", email = "makai@example.com"}
]
keywords = ["portfolio", "trading", "langchain", "langgraph", "trailing-stop"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas>=2.0.0",
    "yfinance>=0.2.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
trailmarker = "trailmarker.cli:app"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/TrailMarker"
Repository = "https://github.com/YOUR_USERNAME/TrailMarker"
Issues = "https://github.com/YOUR_USERNAME/TrailMarker/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trailmarker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
